--- a/toolshed_stats/viewer/templates/main_view.html
+++ b/toolshed_stats/viewer/templates/main_view.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{%  block content %}
 <div>
-    <table>
+    <table class="table table-dark">
         <tr>
             <th>
                 Imię i nazwisko
@@ -39,29 +35,38 @@
                     {{ player.full_name }}
                 </td>
                 <td>
-                    {{ player.present_total }}
+                    {{ player.present_total|floatformat:0 }}
                 </td>
                 <td>
+                    {% if player.number %}
                     {{ player.number }}
+                    {% endif %}
                 </td>
                 <td>
-                    {{ player.goals_total }}
+                    {{ player.goals_total|floatformat:0 }}
                 </td>
                 <td>
-                    {{ player.assists_total }}
+                    {{ player.assists_total|floatformat:0 }}
                 </td>
                 <td>
-                    {{ player.owngoals_total }}
+                    {{ player.goals_per_match|floatformat:2 }}
                 </td>
                 <td>
-                    {{ player.goals_per_match }}
-                </td>
-                <td>
-                    {{ player.assists_per_match }}
+                    {{ player.assists_per_match|floatformat:2 }}
                 </td>
             </tr>
         {% endfor %}
     </table>
 </div>
-</body>
-</html>
+    <div class="scrollmenu" style="overflow: auto; white-space: nowrap">
+        {% for tournament in tournaments %}
+            <div style="display: inline-block; max-width: 25%; max-height: 25%; text-align: center">
+                <a>{{ tournament.name }}</a>
+                <br>
+                <picture>
+                     <img src="{{ MEDIA_URL }}{{ tournament.logo }}" alt="No logo">
+                </picture>
+            </div>
+        {% endfor %}
+    </div>
+{% endblock %}
