--- a/toolshed_stats/viewer/templates/main_view.html
+++ b/toolshed_stats/viewer/templates/main_view.html
@@ -32,7 +32,7 @@
         {% for player in players %}
             <tr>
                 <td>
-                    {{ player.full_name }}
+                    <a href={% url 'player_detail_view' player.id %}>{{ player.full_name }}</a>
                 </td>
                 <td>
                     {{ player.present_total|floatformat:0 }}
